preferences page is generated

--- a/Android/AndroidPlay/app/src/main/res/values/strings.xml
+++ b/Android/AndroidPlay/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">AndroidPlay</string>
+    <string name="app_name">Cogeq</string>
+    <string name="main_no_items">No preference to display</string>
 </resources>
