main activity is changed. this new main activity can be used to run other activities.

--- a/Android/AndroidPlay/app/src/main/res/values/strings.xml
+++ b/Android/AndroidPlay/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Cogeq</string>
     <string name="main_no_items">No preference to display</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
