--- a/Android/AndroidPlay/app/src/main/res/values/strings.xml
+++ b/Android/AndroidPlay/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Cogeq</string>
     <string name="main_no_items">No preference to display</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_sign_up">SignUpActivity</string>
 </resources>
