small beginnings of date and city pickers activities

--- a/Android/AndroidPlay/app/src/main/res/values/strings.xml
+++ b/Android/AndroidPlay/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="main_no_items">No preference to display</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
+    <string name="title_activity_date_picker">DatePicker</string>
 </resources>
