--- a/Android/AndroidPlay/app/src/main/res/values/strings.xml
+++ b/Android/AndroidPlay/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="title_activity_date_picker">DatePicker</string>
+    <string name="title_activity_settings_drawer">SettingsDrawerActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
