--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/values/strings.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="title_activity_launcher">LauncherActivity</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_cogeq_activity_view">CogeqActivityViewActivity</string>
-    <string name="backendServer">http://10.0.2.2:5000</string>
+    <string name="backendServer">http://cogeq.herokuapp.com</string>
 </resources>
