--- a/Android/SmartTravelling(COGEQ)/app/src/main/res/values/strings.xml
+++ b/Android/SmartTravelling(COGEQ)/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">COGEQ</string>
+    <string name="app_name">Cogeq</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
